extracted additional metadata for the ECG and stored the metadata csv file

--- a/demographics.ipynb
+++ b/demographics.ipynb
@@ -13,20 +13,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
     "def extract_demographics(root):\n",
     "    p_data = {}\n",
     "\n",
+    "    # Get the device source and activity type\n",
     "    source = root.find(\".//SOURCE\")\n",
     "    p_data[\"Activity\"] = source.get(\"TYPE\")\n",
     "    p_data[\"Model\"] = source.get(\"MODEL\")\n",
     "\n",
+    "    # Get the site number and ECG metadata + aquisition time\n",
     "    site = root.find(\".//SITE\")\n",
     "    if site is not None:\n",
     "        p_data[\"Site Number:\"] = site.get(\"ID\")\n",
+    "\n",
+    "    p_data[\"Acquisition Time\"] = root.attrib[\"ACQUISITION_TIME\"]\n",
+    "    p_data[\"QRS Count\"] = root.attrib[\"NUM_QRS\"]\n",
+    "    p_data[\"Average RR\"] = root.attrib[\"AVERAGE_RR\"]\n",
+    "    p_data[\"Heart Rate\"] = 60000 / int(p_data[\"Average RR\"])\n",
     "\n",
     "    for demo in root.findall(\".//DEMOGRAPHIC_FIELD\"):\n",
     "        label = demo.get(\"LABEL\")\n",
@@ -40,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,180 +90,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "demo_df = pd.DataFrame(p_demographics)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "duplicate_rows = demo_df[demo_df.duplicated(\"ID\", keep=False)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Activity</th>\n",
-       "      <th>Model</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Site Number</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3994</th>\n",
-       "      <td>RESTING</td>\n",
-       "      <td>el150/250</td>\n",
-       "      <td>32</td>\n",
-       "      <td>1003195522</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1444</th>\n",
-       "      <td>RESTING</td>\n",
-       "      <td>el150/250</td>\n",
-       "      <td>30</td>\n",
-       "      <td>1003195522</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>62</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3698</th>\n",
-       "      <td>RESTING</td>\n",
-       "      <td>el150/250</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1021213008</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>007</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2131</th>\n",
-       "      <td>RESTING</td>\n",
-       "      <td>el150/250</td>\n",
-       "      <td>32</td>\n",
-       "      <td>1021213008</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>62</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1776</th>\n",
-       "      <td>RESTING</td>\n",
-       "      <td>el150/250</td>\n",
-       "      <td>32</td>\n",
-       "      <td>1021213008</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>62</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2184</th>\n",
-       "      <td>RESTING</td>\n",
-       "      <td>el150/250</td>\n",
-       "      <td>30</td>\n",
-       "      <td>1032132066</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>008</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3642</th>\n",
-       "      <td>RESTING</td>\n",
-       "      <td>el150/250</td>\n",
-       "      <td>30</td>\n",
-       "      <td>1032132066</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>008</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3074</th>\n",
-       "      <td>RESTING</td>\n",
-       "      <td>el150/250</td>\n",
-       "      <td>32</td>\n",
-       "      <td>1032132066</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>008</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1829</th>\n",
-       "      <td>RESTING</td>\n",
-       "      <td>el150/250</td>\n",
-       "      <td>30</td>\n",
-       "      <td>1032132066</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>008</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2210</th>\n",
-       "      <td>RESTING</td>\n",
-       "      <td>el150/250</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1036836926</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>015</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     Activity      Model Age          ID     Sex Site Number\n",
-       "3994  RESTING  el150/250  32  1003195522  Female         015\n",
-       "1444  RESTING  el150/250  30  1003195522  Female          62\n",
-       "3698  RESTING  el150/250  35  1021213008    Male         007\n",
-       "2131  RESTING  el150/250  32  1021213008    Male          62\n",
-       "1776  RESTING  el150/250  32  1021213008    Male          62\n",
-       "2184  RESTING  el150/250  30  1032132066    Male         008\n",
-       "3642  RESTING  el150/250  30  1032132066    Male         008\n",
-       "3074  RESTING  el150/250  32  1032132066    Male         008\n",
-       "1829  RESTING  el150/250  30  1032132066    Male         008\n",
-       "2210  RESTING  el150/250  20  1036836926    Male         015"
+       "(3447, 10)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "duplicate_rows.sort_values(by=[\"ID\"]).head(10)"
+    "demo_df = pd.DataFrame(p_demographics).drop_duplicates()\n",
+    "demo_df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique patients in Mortara files: 2477\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_ids = demo_df[\"ID\"].unique()\n",
+    "print(f\"Number of unique patients in Mortara files: {len(unique_ids)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "demo_df.to_csv(\"metadata.csv\", index=False)"
+   ]
   },
   {
    "cell_type": "code",
