new data for mortara, reran extraction scripts for the data

--- a/demographics.ipynb
+++ b/demographics.ipynb
@@ -168,7 +168,7 @@
     "demo_df[\"Average RR\"] = pd.to_numeric(demo_df[\"Average RR\"])\n",
     "demo_df.info()\n",
     "\n",
-    "#demo_df.to_csv(\"/media/nvme1/pbecg-data/metadata.csv\", index=False)"
+    "demo_df.to_csv(\"/media/nvme1/pbecg-data/metadata.csv\", index=False)"
    ]
   },
   {
