--- a/noteboooks/prepare_dataset.ipynb
+++ b/noteboooks/prepare_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,13 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_ecg(path: Path, ecg_data):\n",
     "    # Directory and file setup\n",
-    "    subject_dir = path / \"dataset\" / ecg_data[\"subject_id\"]\n",
+    "    subject_dir = path / ecg_data[\"subject_id\"]\n",
     "    dat_filename = subject_dir / f\"{ecg_data['seq_id']}.dat\"\n",
     "    header_filename = subject_dir / f\"{ecg_data['seq_id']}.hea\"\n",
     "\n",
@@ -54,25 +54,30 @@
     "    \n",
     "    # Create the header file\n",
     "    with header_filename.open(\"w\") as file:\n",
+    "        # Header line\n",
     "        file.write(f\"{ecg_data['seq_id']} {num_leads} 1000 {num_samples}\\n\")\n",
+    "        # Write individual lead information\n",
     "        for lead in lead_order:\n",
-    "            file.write(f\"{ecg_data['seq_id']}.dat 16 {ecg_data['scale']} 0 0 {lead}\\n\")"
+    "            file.write(f\"{ecg_data['seq_id']}.dat 16 {ecg_data['scale']} 0 0 {lead}\\n\")\n",
+    "        \n",
+    "        # Write acquisition time\n",
+    "        file.write(f\"# Acquisition Time: {ecg_data['acq_time']}\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_ecg_data(root):\n",
+    "def extract_ecg_data(save_path: Path, xml_root):\n",
     "    # Define the namespace\n",
     "    namespaces = {\"ns\": \"urn:hl7-org:v3\"}\n",
     "\n",
     "    # Extract the sequence id and other sequence related metadata\n",
-    "    seq_id = root.find(\".//ns:id\", namespaces).attrib[\"root\"]\n",
-    "    subject_id = root.find(\".//ns:trialSubject/ns:id\", namespaces).attrib[\"extension\"]\n",
-    "    acq_time = root.find(\".//ns:effectiveTime/ns:low\", namespaces).attrib[\"value\"]\n",
+    "    seq_id = xml_root.find(\".//ns:id\", namespaces).attrib[\"root\"]\n",
+    "    subject_id = xml_root.find(\".//ns:trialSubject/ns:id\", namespaces).attrib[\"extension\"]\n",
+    "    acq_time = xml_root.find(\".//ns:effectiveTime/ns:low\", namespaces).attrib[\"value\"]\n",
     "\n",
     "    # Initialize a dictionary to hold the ECG data\n",
     "    ecg_data = {\n",
@@ -90,7 +95,7 @@
     "    }\n",
     "\n",
     "    # Extract the ECG signal, unit, and scale\n",
-    "    for component in root.findall(\".//ns:sequenceSet/ns:component\", namespaces)[1:13]:\n",
+    "    for component in xml_root.findall(\".//ns:sequenceSet/ns:component\", namespaces)[1:13]:\n",
     "        sequence = component.find(\".//ns:sequence\", namespaces)\n",
     "        if sequence is not None:\n",
     "            lead = sequence.find(\".//ns:code\", namespaces).attrib[\"code\"]\n",
@@ -101,15 +106,15 @@
     "            ecg_data[\"leads\"][lead] = signal\n",
     "            ecg_data[\"scale\"] = scale\n",
     "    \n",
-    "    root_path = Path(\"/media/nvme1/pbecg-data/\")\n",
-    "    save_ecg(root_path, ecg_data)\n",
+    "    # Save the ECG data according to the MIT-BIH format. \n",
+    "    save_ecg(save_path, ecg_data)\n",
     "    \n",
     "    return ecg_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -12133,16 +12138,17 @@
        " 'scale': 1.25}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "save_path = Path(\"/media/nvme1/pbecg-data/dataset/\")\n",
     "data_path = Path(\"/media/nvme1/pbecg-data/fda/2018/R^ECG^F_0^0_5692915810^008^STUDY START_20180216103233_20180804101143.xml\")\n",
     "tree = ET.parse(data_path)\n",
     "root = tree.getroot()\n",
-    "extract_ecg_data(root)"
+    "extract_ecg_data(save_path, root)"
    ]
   },
   {
