added a unit field into the storage

--- a/noteboooks/eda.ipynb
+++ b/noteboooks/eda.ipynb
@@ -2,125 +2,192 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "import pandas as pd"
+    "import wfdb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = Path(\"/media/nvme1/pbecg-data/dataset.parquet\")\n",
-    "df = pd.read_parquet(data_path)"
+    "data_path = Path(\"/media/nvme1/pbecg-data/dataset/1003195522/4ea539fb-d67f-4159-8d3f-0e510e6f4589\")\n",
+    "record = wfdb.rdrecord(data_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Pacemaker Findings</th>\n",
-       "      <th>subject_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>88</th>\n",
-       "      <td>ventricular paced (vvi)</td>\n",
-       "      <td>5940408469</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>298</th>\n",
-       "      <td>ventricular paced (vvi)</td>\n",
-       "      <td>8380278887</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>963</th>\n",
-       "      <td>ventricular paced (vvi)</td>\n",
-       "      <td>5366077933</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2360</th>\n",
-       "      <td>atrial paced</td>\n",
-       "      <td>6800802059</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2486</th>\n",
-       "      <td>atrial paced</td>\n",
-       "      <td>3395063128</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2566</th>\n",
-       "      <td>atrial paced</td>\n",
-       "      <td>3881251540</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2968</th>\n",
-       "      <td>ventricular paced (vvi)</td>\n",
-       "      <td>2524410579</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2990</th>\n",
-       "      <td>ventricular paced (vvi)</td>\n",
-       "      <td>5829591284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3076</th>\n",
-       "      <td>ventricular paced (vvi)</td>\n",
-       "      <td>5858492837</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           Pacemaker Findings  subject_id\n",
-       "88    ventricular paced (vvi)  5940408469\n",
-       "298   ventricular paced (vvi)  8380278887\n",
-       "963   ventricular paced (vvi)  5366077933\n",
-       "2360             atrial paced  6800802059\n",
-       "2486             atrial paced  3395063128\n",
-       "2566             atrial paced  3881251540\n",
-       "2968  ventricular paced (vvi)  2524410579\n",
-       "2990  ventricular paced (vvi)  5829591284\n",
-       "3076  ventricular paced (vvi)  5858492837"
+       "{'record_name': '4ea539fb-d67f-4159-8d3f-0e510e6f4589',\n",
+       " 'n_sig': 12,\n",
+       " 'fs': 1000,\n",
+       " 'counter_freq': None,\n",
+       " 'base_counter': None,\n",
+       " 'sig_len': 10000,\n",
+       " 'base_time': None,\n",
+       " 'base_date': None,\n",
+       " 'comments': ['Acquisition Time: 20180427162143'],\n",
+       " 'sig_name': ['I',\n",
+       "  'II',\n",
+       "  'III',\n",
+       "  'aVR',\n",
+       "  'aVL',\n",
+       "  'aVF',\n",
+       "  'V1',\n",
+       "  'V2',\n",
+       "  'V3',\n",
+       "  'V4',\n",
+       "  'V5',\n",
+       "  'V6'],\n",
+       " 'p_signal': array([[   2.4,    0. ,   -2.4, ...,  -52. ,  -36. ,  -20. ],\n",
+       "        [  28. ,   32. ,    4. , ...,  -40. ,  -16. ,   -8. ],\n",
+       "        [  29.6,   32. ,    2.4, ...,  -40. ,  -12. ,   -8. ],\n",
+       "        ...,\n",
+       "        [-112. , -168. ,  -56. , ..., -184. , -128. ,  -96. ],\n",
+       "        [-106.4, -162.4,  -56. , ..., -176. , -128. , -100. ],\n",
+       "        [-100. , -156. ,  -56. , ..., -168. , -128. , -104. ]]),\n",
+       " 'd_signal': None,\n",
+       " 'e_p_signal': None,\n",
+       " 'e_d_signal': None,\n",
+       " 'file_name': ['4ea539fb-d67f-4159-8d3f-0e510e6f4589.dat',\n",
+       "  '4ea539fb-d67f-4159-8d3f-0e510e6f4589.dat',\n",
+       "  '4ea539fb-d67f-4159-8d3f-0e510e6f4589.dat',\n",
+       "  '4ea539fb-d67f-4159-8d3f-0e510e6f4589.dat',\n",
+       "  '4ea539fb-d67f-4159-8d3f-0e510e6f4589.dat',\n",
+       "  '4ea539fb-d67f-4159-8d3f-0e510e6f4589.dat',\n",
+       "  '4ea539fb-d67f-4159-8d3f-0e510e6f4589.dat',\n",
+       "  '4ea539fb-d67f-4159-8d3f-0e510e6f4589.dat',\n",
+       "  '4ea539fb-d67f-4159-8d3f-0e510e6f4589.dat',\n",
+       "  '4ea539fb-d67f-4159-8d3f-0e510e6f4589.dat',\n",
+       "  '4ea539fb-d67f-4159-8d3f-0e510e6f4589.dat',\n",
+       "  '4ea539fb-d67f-4159-8d3f-0e510e6f4589.dat'],\n",
+       " 'fmt': ['16',\n",
+       "  '16',\n",
+       "  '16',\n",
+       "  '16',\n",
+       "  '16',\n",
+       "  '16',\n",
+       "  '16',\n",
+       "  '16',\n",
+       "  '16',\n",
+       "  '16',\n",
+       "  '16',\n",
+       "  '16'],\n",
+       " 'samps_per_frame': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       " 'skew': [None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None],\n",
+       " 'byte_offset': [None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None],\n",
+       " 'adc_gain': [1.25,\n",
+       "  1.25,\n",
+       "  1.25,\n",
+       "  1.25,\n",
+       "  1.25,\n",
+       "  1.25,\n",
+       "  1.25,\n",
+       "  1.25,\n",
+       "  1.25,\n",
+       "  1.25,\n",
+       "  1.25,\n",
+       "  1.25],\n",
+       " 'baseline': [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " 'units': ['mV',\n",
+       "  'mV',\n",
+       "  'mV',\n",
+       "  'mV',\n",
+       "  'mV',\n",
+       "  'mV',\n",
+       "  'mV',\n",
+       "  'mV',\n",
+       "  'mV',\n",
+       "  'mV',\n",
+       "  'mV',\n",
+       "  'mV'],\n",
+       " 'adc_res': [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " 'adc_zero': [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " 'init_value': [None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None],\n",
+       " 'checksum': [None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None],\n",
+       " 'block_size': [None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None,\n",
+       "  None]}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[~df[\"Pacemaker Findings\"].isnull()][[\"Pacemaker Findings\", \"subject_id\"]]"
+    "record.__dict__"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
